Updated Makefile and removed not needed ints.h file

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,12 +1,12 @@
 # Target device
-MCU = attiny85
-F_CPU = 16000000
+MCU = attiny861
+F_CPU = 8000000
 LFUSE = 0xE1
 HFUSE = 0xDD
 EFUSE = 0xFF
 
 # Application files and targets
-TARGET = output
+TARGET = morse
 
 # Place -I options here
 CINCS = 
@@ -17,7 +17,7 @@ CEXTRA =
 CXXEXTRA = 
 
 # Source files for C compiler
-SRC = 
+SRC = main.c dac.c audio.c flash.c
 
 # Source files for C++ compiler
 CXXSRC = 
