Add mu-law audio data

--- a/samples/Makefile
+++ b/samples/Makefile
@@ -1,5 +1,5 @@
-SAMPLEROM = czech_v0.1.rom
-INDEXTABLE= table_v0.1.rom
+SAMPLEROM = czech_v0.3_mulaw_16kHz.rom
+INDEXTABLE= table_v0.2_16kHz.rom
 
 all: flash.rom
 
